// Generated by j5build v0.0.0-20250327071644-781ea9870e8f. DO NOT EDIT

syntax = "proto3";

package test.v1.service;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";
import "test/v1/foo.j5s.proto";

service FooQueryService {
  option (j5.ext.v1.service).state_query.entity = "foo";

  rpc FooGet(FooGetRequest) returns (FooGetResponse) {
    option (google.api.http) = {get: "/test/v1/foo/q/{foo_id}"};
    option (j5.ext.v1.method).state_query.get = true;
  }

  rpc FooList(FooListRequest) returns (FooListResponse) {
    option (google.api.http) = {get: "/test/v1/foo/q"};
    option (j5.ext.v1.method).state_query.list = true;
  }

  rpc FooEvents(FooEventsRequest) returns (FooEventsResponse) {
    option (google.api.http) = {get: "/test/v1/foo/q/{foo_id}/events"};
    option (j5.ext.v1.method).state_query.list_events = true;
  }
}

service FooService {
  rpc FooSummary(FooSummaryRequest) returns (FooSummaryResponse) {
    option (google.api.http) = {get: "/test/v1/foo/summary"};
  }
}

message FooGetRequest {
  option (j5.ext.v1.message).object = {};

  string foo_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true,
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];
}

message FooGetResponse {
  option (j5.ext.v1.message).object = {};

  test.v1.FooState foo = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  repeated test.v1.FooEvent events = 2 [(j5.ext.v1.field).array = {}];
}

message FooListRequest {
  option (j5.ext.v1.message).object = {};

  j5.list.v1.PageRequest page = 1 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 2 [(j5.ext.v1.field).object = {}];
}

message FooListResponse {
  option (j5.ext.v1.message).object = {};

  repeated test.v1.FooState foo = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).array = {}
  ];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}

message FooEventsRequest {
  option (j5.ext.v1.message).object = {};

  string foo_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true,
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];

  j5.list.v1.PageRequest page = 2 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 3 [(j5.ext.v1.field).object = {}];
}

message FooEventsResponse {
  option (j5.ext.v1.message).object = {};

  repeated test.v1.FooEvent events = 1 [(j5.ext.v1.field).array = {}];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}

message FooSummaryRequest {
  option (j5.ext.v1.message).object = {};
}

message FooSummaryResponse {
  option (j5.ext.v1.message).object = {};

  int64 count_foos = 1 [(j5.ext.v1.field).integer = {}];

  int64 total_weight = 2 [(j5.ext.v1.field).integer = {}];

  int64 total_height = 3 [(j5.ext.v1.field).integer = {}];

  int64 total_length = 4 [(j5.ext.v1.field).integer = {}];
}
